Behavior correction & player shifting displayed

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body{
+body {
   background-color: rgb(233, 233, 233);
   font-family: "helvetica";
 }
@@ -8,19 +8,19 @@ h1 {
   justify-content: center;
 }
 
-header{
+header {
   display: flex;
   justify-content: center;
 }
 
-.title{
+.title {
   width: 70%;
   max-width: 650px;
   min-width: 400px;
   object-fit: contain;
 }
 
-.row{
+.row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -34,7 +34,29 @@ header{
 
 .board-game {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.fas {
+  font-size: 200px;
+  padding: 20px;
+}
+
+.fas-white {
+  color: white;
+}
+
+.fas-blink{
+  animation: blink 0.5s step-end infinite alternate;
+}
+
+@keyframes blink {
+  50% {
+    display: inline-block;
+    border-radius: 60px;
+    box-shadow: 0px 2px 15px #008000;
+  }
 }
 
 .subsection {
@@ -44,27 +66,28 @@ header{
 }
 
 footer {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
 }
-.play{
+.play {
   background-color: green;
-    height: 60px;
-    padding: 0 100px;
-    border-radius: 40px;
-    font-size: 18px;
-    letter-spacing: 3px;
-    font-weight: 300;
+  height: 60px;
+  padding: 0 100px;
+  border-radius: 40px;
+  font-size: 18px;
+  letter-spacing: 3px;
+  font-weight: 300;
 }
 
-.play a{
+.play a {
   color: white;
   text-decoration: none;
 }
 
-.rules, .play{
+.rules,
+.play {
   margin: 30px;
   /* text-align: center; */
 }
@@ -107,7 +130,7 @@ footer {
   }
 
   100% {
-    opacity: 1.0;
+    opacity: 1;
     width: 50%;
     height: 50%;
   }
